--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^7.2.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuexfire": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
