global currency filter

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "accounting-js": "^1.1.1",
     "core-js": "^3.3.2",
     "firebase": "^7.2.3",
     "vue": "^2.6.10",
